document sorting, column editing

--- a/docgen.ipynb
+++ b/docgen.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        " '__subclasshook__']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "documents = []\n",
+    "documents = {}\n",
     "for i, entry in enumerate(library.entries):\n",
     "    document = {}\n",
     "    document[\"id\"] = str(i)\n",
@@ -141,17 +141,108 @@
     "    bibtex.pop(\"local-url\")\n",
     "    bibtex.pop(\"ID\")\n",
     "    document[\"bibtex\"] = bibtex\n",
-    "    documents.append(document)"
+    "    if \"abstract\" in document[\"bibtex\"]:\n",
+    "        document[\"bibtex\"][\"abstract\"] = document[\"bibtex\"][\"abstract\"].replace(\"{\", \"\").replace(\"}\", \"\")\n",
+    "    if \"title\" in document[\"bibtex\"]:\n",
+    "        document[\"bibtex\"][\"title\"] = document[\"bibtex\"][\"title\"].replace(\"{\", \"\").replace(\"}\", \"\")\n",
+    "    documents[document[\"id\"]] = document"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22701184332322387754\n",
+      "90037340089045612381\n",
+      "88764297951629466335\n",
+      "01905090715475391966\n",
+      "97094715314815618253\n",
+      "26567952613852015830\n",
+      "03362267536865728780\n",
+      "19384420171743374029\n",
+      "73223695003898760276\n",
+      "05534037866803586695\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate random 20 digit id\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "def generate_id():\n",
+    "    return \"\".join([str(random.randint(0, 9)) for i in range(20)])\n",
+    "\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print(generate_id())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folders = {\n",
+    "    \"23625556262883782487\": {\n",
+    "        \"id\": \"23625556262883782487\",\n",
+    "        \"name\": \"School\",\n",
+    "        \"parent\": None,\n",
+    "        \"children\": [\"94461546571198391735\", \"10804647432550881374\"],\n",
+    "        \"documents\": [\"0\", \"1\"],\n",
+    "    },\n",
+    "    \"94461546571198391735\": {\n",
+    "        \"id\": \"94461546571198391735\",\n",
+    "        \"name\": \"Deep Learning\",\n",
+    "        \"parent\": \"23625556262883782487\",\n",
+    "        \"children\": [\"26694157651817043115\", \"08428438518642337689\"],\n",
+    "        \"documents\": [\"2\"],\n",
+    "    },\n",
+    "    \"26694157651817043115\": {\n",
+    "        \"id\": \"26694157651817043115\",\n",
+    "        \"name\": \"Papers\",\n",
+    "        \"parent\": \"94461546571198391735\",\n",
+    "        \"children\": [],\n",
+    "        \"documents\": [\"5\", \"6\"],\n",
+    "    },\n",
+    "    \"08428438518642337689\": {\n",
+    "        \"id\": \"08428438518642337689\",\n",
+    "        \"name\": \"Websites\",\n",
+    "        \"parent\": \"94461546571198391735\",\n",
+    "        \"children\": [],\n",
+    "        \"documents\": [\"7\", \"8\"],\n",
+    "    },\n",
+    "    \"10804647432550881374\": {\n",
+    "        \"id\": \"10804647432550881374\",\n",
+    "        \"name\": \"Machine Perception\",\n",
+    "        \"parent\": \"23625556262883782487\",\n",
+    "        \"children\": [],\n",
+    "        \"documents\": [\"3\", \"4\"],\n",
+    "    },\n",
+    "    \"06561253512332369082\": {\n",
+    "        \"id\": \"06561253512332369082\",\n",
+    "        \"name\": \"Work\",\n",
+    "        \"parent\": None,\n",
+    "        \"children\": [],\n",
+    "        \"documents\": [\"9\", \"10\", \"11\", \"12\", \"13\", \"14\", \"15\"],\n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"test_documents.json\", \"w\") as f:\n",
-    "    json.dump({\"documents\": documents}, f, indent=2)"
+    "    json.dump({\"documents\": documents, \"folders\": folders}, f, indent=2)"
    ]
   },
   {
